--- a/style.css
+++ b/style.css
@@ -166,14 +166,16 @@ button:hover {
   .card h1{
     font-size: 1.5rem;
   }
-  input{
-    font-size: 0.7rem;
-
-  }
+ 
   button {
     margin: 0.1rem;
     height: 25px;
     width: 25px;
   }
   
+}
+@media screen and (max-width: 360px){
+    input{
+        font-size: 0.8rem;
+    }
 }
